# wavetrace

./: .env.signing.example  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Goal.md  LICENSE  PRIVACY.md  README.md  SECURITY.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: arch-binary-retry.yml  ci.yml  release-linux.yml  release.yml  store-msix-retry.yml
docs/: accessibility.md  future-capabilities.md
fixtures/: expected.json  reference.json
fixtures/captured/: manifest.json
microsoft-store/: Package.appxmanifest  README.md
packaging/arch/: PKGBUILD
scripts/: analyze_skip_coin.py  build-arch.sh  build-macos.sh  build-microsoft-store.ps1  build-signed.ps1  bundle-macos-deps.sh  package-macos-dmg.sh  package-macos-updater.sh  parse_scanner_log.ps1  publish-latest-json.mjs  set-github-updater-secret.ps1  setup-trusted-signing.ps1  setup-updater-signing.ps1  trusted-sign.ps1
src/: App.tsx  api.ts  appDataInfo.ts  changelog.ts  chartData.ts  chartScreenshot.ts  confirmDialog.ts  debugPackage.ts  exportDownload.ts  main.tsx  ntfySettings.ts  runType.ts  skipCoinAnalysis.ts  skipDisplay.ts  styles.css  toast.ts  uiError.ts  updater.ts  vite-env.d.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json  tauri.microsoftstore.conf.json  tauri.signed.windows.conf.json
src-tauri/capabilities/: desktop.json
src-tauri/examples/: capture_fixtures.rs  gen_dissonance_templates.rs  label_corpus.rs  reanalyze_corpus.rs  seed_captured_corpus.rs
src-tauri/icons/: icon.icns
src-tauri/src/: anchor.rs  app_icon.rs  backup.rs  capture.rs  classify.rs  commands.rs  db.rs  debug_package.rs  diagnostics.rs  dissonance_icons.rs  export.rs  field_regions.rs  fields.rs  fixture_capture.rs  fixture_corpus.rs  lib.rs  main.rs  notifications.rs  ocr.rs  parser.rs  scanner.rs  settings.rs  shutdown_hook.rs  state_machine.rs  tray.rs
src/components/: AppUpdater.tsx  ChangelogPanel.tsx  ChartScreenshotActions.tsx  CoinVsWaveChart.tsx  ConfirmDialog.tsx  Dashboard.tsx  History.tsx  NotificationOption.tsx  ScannerLogViewer.tsx  SettingsPage.tsx  SkipCoinAnalytics.tsx  SortableTh.tsx  ToastStack.tsx
