[package]
name = "wavetrace"
version = "0.1.0"
description = "WaveTrace — automatic per-wave tracking for The Tower"
edition = "2021"

[lib]
name = "wavetrace_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
arboard = "3.4.1"
base64 = "0.22.1"
chrono = "0.4.45"
dirs = "6.0.0"
icu_locale_core = "2"
image = "0.25.10"
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
spreadsheet-ods = "1.0.4"
tauri = { version = "2", features = ["tray-icon"] }
uuid = { version = "1.23.3", features = ["v4"] }

[target.'cfg(windows)'.dependencies]
futures = "0.3.31"
windows = { version = "0.62", features = [
    "Foundation",
    "Foundation_Collections",
    "Graphics_Imaging",
    "Media_Ocr",
    "Win32_System_WinRT",
] }
xcap = { version = "0.9.6", features = ["wgc"] }

[target.'cfg(not(windows))'.dependencies]
tesseract = "0.15.2"
xcap = "0.9.6"
